--- a/spring-boot-weblogic/spring-boot-weblogic-war/pom.xml
+++ b/spring-boot-weblogic/spring-boot-weblogic-war/pom.xml
@@ -11,6 +11,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <dependencyScopeTomcat>provided</dependencyScopeTomcat>
+    </properties>
+
     <artifactId>spring-boot-weblogic-war</artifactId>
     <packaging>war</packaging>
 
@@ -29,7 +33,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
-            <scope>provided</scope>
+            <scope>${dependencyScopeTomcat}</scope>
         </dependency>
 
         <dependency>
@@ -45,5 +49,14 @@
         </dependency>
 
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <dependencyScopeTomcat>compile</dependencyScopeTomcat>
+            </properties>
+        </profile>
+    </profiles>
 
 </project>
