--- a/jpa-stored-procedure/build.gradle
+++ b/jpa-stored-procedure/build.gradle
@@ -25,6 +25,8 @@ repositories {
     mavenCentral()
 }
 
+ext['hibernate.version'] = '5.1.0.Final'
+
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
