--- a/jpa-stored-procedure/src/main/resources/application.yml
+++ b/jpa-stored-procedure/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+    properties:
+      hibernate:
+        proc:
+          param_null_passing: true
 
 logging:
   level:
