--- a/weblogic-ws-security/pom.xml
+++ b/weblogic-ws-security/pom.xml
@@ -20,8 +20,8 @@
 
     <modules>
         <module>weblogic-ear</module>
-        <module>weblogic-securedservice</module>
         <module>weblogic-soapclient</module>
+        <!--<module>weblogic-securedservice</module>-->
     </modules>
 
     <dependencyManagement>
@@ -42,12 +42,12 @@
                 <type>war</type>
             </dependency>
 
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>weblogic-securedservice</artifactId>
-                <version>${project.version}</version>
-                <type>war</type>
-            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>${project.groupId}</groupId>-->
+                <!--<artifactId>weblogic-securedservice</artifactId>-->
+                <!--<version>${project.version}</version>-->
+                <!--<type>war</type>-->
+            <!--</dependency>-->
 
         </dependencies>
     </dependencyManagement>
