--- a/spring-boot-jms/spring-boot-jms-base/pom.xml
+++ b/spring-boot-jms/spring-boot-jms-base/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>jms-api</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-client</artifactId>
+            <version>5.14.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
