--- a/spring-boot-jms/pom.xml
+++ b/spring-boot-jms/pom.xml
@@ -8,17 +8,12 @@
     <groupId>com.apixandru.casestudy</groupId>
     <artifactId>spring-boot-jms</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
 
     <properties>
         <version.java>1.8</version.java>
         <version.maven.compiler>3.5.1</version.maven.compiler>
         <version.spring.boot>1.4.0.RELEASE</version.spring.boot>
     </properties>
-
-    <modules>
-        <module>spring-boot-jms-base</module>
-    </modules>
 
     <dependencyManagement>
         <dependencies>
@@ -31,14 +26,34 @@
                 <scope>import</scope>
             </dependency>
 
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>spring-boot-jms-base</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-
         </dependencies>
     </dependencyManagement>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jms</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.jms</groupId>
+            <artifactId>jms-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-client</artifactId>
+            <version>5.14.0</version>
+        </dependency>
+
+    </dependencies>
+
 
     <build>
         <pluginManagement>
