--- a/spring-boot-weblogic-jms/pom.xml
+++ b/spring-boot-weblogic-jms/pom.xml
@@ -23,6 +23,7 @@
     <modules>
         <module>spring-boot-weblogic-jms-war</module>
         <module>spring-boot-weblogic-jms-ear</module>
+        <module>spring-boot-weblogic-jms-devconfig</module>
     </modules>
 
     <dependencyManagement>
