--- a/spring-hibernate-transactional/spring-hibernate-transactional-mvc/pom.xml
+++ b/spring-hibernate-transactional/spring-hibernate-transactional-mvc/pom.xml
@@ -15,13 +15,10 @@
     <packaging>war</packaging>
 
     <dependencies>
+
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-orm</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
