upgrade spring boot to version 2.x

--- a/spring-hibernate-transactional/spring-hibernate-transactional-boot/src/main/resources/application.yml
+++ b/spring-hibernate-transactional/spring-hibernate-transactional-boot/src/main/resources/application.yml
@@ -3,6 +3,9 @@ server:
 
 spring:
   datasource:
-    jndi-name: jndi/demo
+    url: jdbc:derby://localhost:1527/myDB
+    driver-class-name: org.apache.derby.jdbc.ClientDriver
+#    jndi-name: jdbc/derbyxa
+
 debug: true
 
