--- a/spring-hibernate-transactional/spring-hibernate-transactional-boot/pom.xml
+++ b/spring-hibernate-transactional/spring-hibernate-transactional-boot/pom.xml
@@ -23,7 +23,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
-            <scope>provided</scope>
+            <!--<scope>provided</scope>-->
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
         <dependency>
